# umesh

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
requirements/: requirements-dev.txt  requirements.txt
tests/: test_api.py  test_cli.py
tests/data/: mesh.vtk  mesh.vtu
umesh/: __init__.py  __main__.py  _api.py  _utils.py
